--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
             <div class="container text-center">
                 <p>2026 Spring Semester &copy; Moses Francis</p>
                 <p>Address: 1432 109st S, 82501 Dream city</p>
-                <p> <i> All rights reserved</i></p>
+                <p> <i> All rights reserved.</i></p>
                 <p>
                     Email:
                     <a href="mailto:moses.francis@ndsu.edu" class="text-white">mosesfayia.francis@ndsu2.edu</a>
